--- a/Python Absolute Beginner/Module_4.0_Tutorials_Nested_Conditionals.ipynb
+++ b/Python Absolute Beginner/Module_4.0_Tutorials_Nested_Conditionals.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,19 @@
      "output_type": "stream",
      "text": [
       "Enter a familiar name: \n",
-      "What a lovely name , it's nice to meet you!\n"
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: \n",
+      "Enter a familiar name: dan\n",
+      "Hi dan\n"
      ]
     }
    ],
@@ -673,9 +685,9 @@
     "familiar_name = \"\"\n",
     "while True: \n",
     "    familiar_name = input(\"Enter a familiar name: \")\n",
-    "    if familiar_name.lower() == \"\":\n",
-    "        print(\"What a lovely name\",familiar_name + \", it's nice to meet you!\")\n",
-    "        break \n"
+    "    if familiar_name.lower() != \"\":\n",
+    "        break\n",
+    "print(\"Hi\",familiar_name)"
    ]
   },
   {
@@ -705,9 +717,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "votes = 3\n",
@@ -722,9 +744,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(votes)\n",
     "\n",
@@ -734,9 +765,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seat count: 0\n",
+      "seat count: 1\n",
+      "seat count: 2\n",
+      "seat count: 3\n",
+      "seat count: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the SEAT COUNT code then run \n",
     "\n",
@@ -751,9 +794,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter seat type of \"hard\",\"soft\" or \"exit\" (to finish): soft\n",
+      "enter seat type of \"hard\",\"soft\" or \"exit\" (to finish): hard\n",
+      "enter seat type of \"hard\",\"soft\" or \"exit\" (to finish): soft\n",
+      "enter seat type of \"hard\",\"soft\" or \"exit\" (to finish): rocky\n",
+      "invalid entry: counted as hard\n",
+      "\n",
+      "seats are full\n",
+      "4 Seats Total:  2 hard and 2 soft\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the SEAT TYPE COUNT code then run entering: hard, soft, medium and exit\n",
     "\n",
@@ -801,12 +859,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): l\n",
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): l\n",
+      "Enter a shirt size (if finished enter 'exit'): exit\n",
+      "\n",
+      "5 Small Shirts\n",
+      "3 Medium shirts\n",
+      "2 Large shirts\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the Shirt Count program, run tests\n",
-    "\n"
+    "# Initialize the variables \n",
+    "small_shirts = 0\n",
+    "medium_shirts = 0\n",
+    "large_shirts = 0\n",
+    "\n",
+    "while True:\n",
+    "    shirt_type = input(\"Enter a shirt size (if finished enter 'exit'): \")\n",
+    "    if shirt_type.lower() == \"s\":\n",
+    "        small_shirts += 1\n",
+    "    elif shirt_type.lower() == \"m\":\n",
+    "        medium_shirts += 1\n",
+    "    elif shirt_type.lower() == \"l\":\n",
+    "        large_shirts += 1\n",
+    "    elif shirt_type.lower().startswith(\"e\"):\n",
+    "        break \n",
+    "print()\n",
+    "print(small_shirts,\"Small Shirts\\n\" + str(medium_shirts), \"Medium shirts\\n\" + str(large_shirts), \"Large shirts\")\n"
    ]
   },
   {
@@ -822,12 +918,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): L\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): m\n",
+      "Enter a shirt size (if finished enter 'exit'): s\n",
+      "Enter a shirt size (if finished enter 'exit'): l\n",
+      "Enter a shirt size (if finished enter 'exit'): l\n",
+      "Enter a shirt size (if finished enter 'exit'): exit\n",
+      "\n",
+      "Invoice:\n",
+      "2 Small shirts, $12 is the total for small shirts.\n",
+      "4 Medium shirts, $28 is the total for medium shirts.\n",
+      "3 Large shirts, $24 is the total for large shirts.\n",
+      "$64 is your total.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the Shirt Register program, run tests\n",
-    "\n"
+    "# Initialize the variables \n",
+    "small_shirts = 0\n",
+    "medium_shirts = 0\n",
+    "large_shirts = 0\n",
+    "# Added additional shirt costs\n",
+    "small_cost = 6\n",
+    "medium_cost = 7\n",
+    "large_cost = 8\n",
+    "\n",
+    "while True:\n",
+    "    shirt_type = input(\"Enter a shirt size (if finished enter 'exit'): \")\n",
+    "    if shirt_type.lower() == \"s\":\n",
+    "        small_shirts += 1\n",
+    "    elif shirt_type.lower() == \"m\":\n",
+    "        medium_shirts += 1\n",
+    "    elif shirt_type.lower() == \"l\":\n",
+    "        large_shirts += 1\n",
+    "    elif shirt_type.lower().startswith(\"e\"):\n",
+    "        break \n",
+    "print()\n",
+    "print(\"Invoice:\")\n",
+    "print(small_shirts,\"Small shirts,\",\"$\" + str(small_shirts*small_cost),\"is the total for small shirts.\")\n",
+    "print(medium_shirts,\"Medium shirts,\",\"$\" + str(medium_shirts*medium_cost),\"is the total for medium shirts.\")\n",
+    "print(large_shirts,\"Large shirts,\",\"$\" + str(large_shirts*large_cost),\"is the total for large shirts.\")\n",
+    "print(\"$\" + str((small_shirts*small_cost) + (medium_shirts*medium_cost) + (large_shirts*large_cost)), \"is your total.\") \n"
    ]
   },
   {
@@ -876,9 +1019,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 !\n",
+      "7 !\n",
+      "6 !\n",
+      "5 !\n",
+      "4 !\n",
+      "3 !\n",
+      "2 !\n",
+      "\n",
+      "IGNITION!\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run GREET COUNT\n",
     "greet_count = 8\n",
@@ -911,12 +1070,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me a name of an animal or type \"exit\": \n",
+      "Give me a name of an animal or type \"exit\": \n",
+      "Give me a name of an animal or type \"exit\": exit\n",
+      "   exit\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the Animal Names program, run tests\n",
-    "\n"
+    "num_animals = 0 \n",
+    "all_animals = \"\"\n",
+    "while num_animals < 4:\n",
+    "    all_animals += \" \" + input(\"Give me a name of an animal or type \\\"exit\\\": \")\n",
+    "    num_animals += 1\n",
+    "    if \"exit\" in all_animals:\n",
+    "        break\n",
+    "print(all_animals)  \n"
    ]
   },
   {
@@ -943,9 +1120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student's first (Letters only, No spaces): dan\n",
+      "\n",
+      "Dan has been entered as first name\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example that loops until a valid first name format is entered\n",
     "student_fname = \".\"\n",
@@ -978,11 +1165,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 3\n",
+      "Please enter another number: 4\n",
+      "Please enter another number: 32\n",
+      "Please enter another number: 1\n",
+      "Please enter another number: 4\n",
+      "Please enter another number: 3\n",
+      "Please enter another number: exit\n",
+      "\n",
+      " 3432143\n"
+     ]
+    }
+   ],
    "source": [
-    "# [ ] Create the program, run tests\n"
+    "# [ ] Create the program, run tests\n",
+    "#initialize variables\n",
+    "int_num = input(\"Enter a number: \")\n",
+    "long_num = \" \"\n",
+    "\n",
+    "while int_num.isdigit()==True: \n",
+    "    long_num += int_num\n",
+    "    int_num = input(\"Please enter another number: \")\n",
+    "    if int_num.isalpha():\n",
+    "        break\n",
+    "print()\n",
+    "print(long_num)"
    ]
   },
   {
@@ -998,15 +1212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "2 x 2 = 4\n",
+      "3 x 3 = 9\n",
+      "4 x 4 = 16\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code, run, fix the Logic error\n",
     "count = 1\n",
     "\n",
     "# loop 5 times\n",
-    "while count > 5:\n",
+    "while count < 5:\n",
     "    print(count, \"x\", count, \"=\", count*count)\n",
     "    count +=1\n",
     "    \n"
