--- a/Python Fundamentals/Module_1.1_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1.1_Practice_Python_Fundamentals.ipynb
@@ -26,46 +26,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the second character from planet_name: \"u\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[1:2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[:1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J r\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first and last characters from planet_name\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[0], planet_name[-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using a negative index access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[-7])\n"
    ]
   },
   {
@@ -81,35 +113,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nep tune\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name sliced into the first 3 characters and remaining characters\n",
     "planet_name = \"Neptune\"\n",
-    "\n"
+    "print(planet_name[0:3], planet_name[3:7])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print 1st char and then every 3rd char of wise_words\n",
     "# use string slice with a step\n",
     "wise_words = 'Play it who opens'\n",
-    "\n"
+    "print(wise_words[0::3])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enutpeN\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name in reverse\n",
-    "\n"
+    "print(planet_name[::-1])\n"
    ]
   },
   {
@@ -127,52 +183,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your favorite food: bagels\n",
+      "B\n",
+      "A\n",
+      "G\n",
+      "E\n",
+      "L\n",
+      "S\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Get user input for 1 fav_food\n",
     "# [ ] iterate through letters in fav_food \n",
     "#    - print each letter on a new line\n",
-    "\n",
+    "fav_food = input(\"Enter your favorite food: \")\n",
+    "for word in fav_food:\n",
+    "    print(word.upper())\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good-code-is-commented-code\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] iterate work_tip string concatenate each letter to variable: new_string \n",
     "# [ ] concatenate the letter or a \"-\" instead of a space \" \"\n",
     "# tip: concatenate string example: word = word + \"a\"\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n",
+    "new_string = \"\"\n",
+    "for ltr in work_tip: \n",
+    "    if ltr.isalpha():\n",
+    "        new_string += ltr\n",
+    "    else: \n",
+    "        new_string += \"-\"\n",
+    "print(new_string)   \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiro\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print the first 4 letters of name on new line\n",
     "name = \"Hiroto\"\n",
-    "\n"
+    "print(name[0:4])\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ioo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print every other letter from 2nd to last letter of name \n",
     "name = \"Hiroto\"\n",
-    "\n"
+    "print(name[1::2])\n"
    ]
   },
   {
@@ -195,12 +298,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your first name: richard\n",
+      "dr?hcir\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create Mystery Name\n",
-    "\n"
+    "first_name = input(\"Enter your first name: \")\n",
+    "new_name = \"\"\n",
+    "for ltr in first_name[::-1]:\n",
+    "    if ltr == \"e\":\n",
+    "        new_name += \"?\"\n",
+    "    elif ltr == \"a\":\n",
+    "        new_name += \"?\"\n",
+    "    elif ltr == \"t\":\n",
+    "        new_name += \"?\"\n",
+    "    else: \n",
+    "        new_name += ltr\n",
+    "print(new_name)\n"
    ]
   },
   {
@@ -224,50 +347,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and display the length of the string: topic\n",
     "topic = \"len() returns the length of a string\"\n",
-    "\n"
+    "print(len(topic))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The middle index of the variable topic is \"i\".\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use len() to find and display the mid_pt (middle) index (+/- 1) of the string: topic\n",
     "# note: index values are whole numbers\n",
     "topic = \"len() can take a sequence, like a string, as an argument\"\n",
-    "\n"
+    "mid_pt = (int(len(topic)/2))\n",
+    "print(\"The middle index of the variable topic is \"+'\"'+topic[mid_pt]+'\".')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first instance of the word \"code\" is on index 5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print index where first instance of the word  \"code\" starts using .find()\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "print(\"The first instance of the word \\\"code\\\" is on index \"+str(work_tip.find(\"code\")))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not found\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] search for \"code\" in code_tip using .find() \n",
     "# [ ] search substring with substring index start= 13,end = last char \n",
     "# [ ] save result in variable: code_index\n",
     "# [ ] display index of where \"code\" is found, or print \"not found\" if code_index == -1\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "search_code = work_tip.find(\"code\")\n",
+    "code_index = work_tip[13:-1]\n",
+    "if code_index.find(\"code\") == -1:\n",
+    "    print(\"not found\")\n",
+    "else:\n",
+    "    print(code_index.find(\"code\"))\n",
+    "    "
    ]
   },
   {
@@ -282,27 +444,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of w's found: 0\n",
+      "Amount of o's found: 5\n",
+      "Amount of times's \"code\" was used: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and report (print) number of w's, o's + use of word \"code\"\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "print(\"Amount of w's found:\", work_tip.count(\"w\"))\n",
+    "print(\"Amount of o's found:\", work_tip.count(\"o\"))\n",
+    "print(\"Amount of times's \\\"code\\\" was used:\", work_tip.count(\"code\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code_tip: code a conditional decision like you would say it\n",
+      "The total amount of i's are: 6\n",
+      "i\n",
+      "i\n",
+      "i\n",
+      "i\n",
+      "i\n",
+      "i\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  count times letter \"i\" appears in code_tip string\n",
     "# [ ] find and display the index of all the letter i's in code_tip\n",
     "# Remember: if .find(\"i\") has No Match, -1 is returned\n",
     "code_tip = \"code a conditional decision like you would say it\"\n",
     "print (\"code_tip:\" , code_tip)\n",
-    "\n"
+    "print(\"The total amount of i's are:\", code_tip.count(\"i\"))\n",
+    "\n",
+    "for letters in code_tip: \n",
+    "    if letters == \"i\":\n",
+    "        print(letters[0])\n",
+    "    else: \n",
+    "        pass"
    ]
   },
   {
@@ -346,13 +541,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a quote: Where there is a will, there is a way.\n",
+      "WHERE\n",
+      "THERE\n",
+      "IS\n",
+      "WILL\n",
+      "THERE\n",
+      "IS\n",
+      "WAY\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\"\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
-    "\n"
+    "word = \"\"\n",
+    "quote = input(\"Enter a quote: \")\n",
+    "for ltr in quote:\n",
+    "    if ltr.isalpha():\n",
+    "        word += ltr\n",
+    "    else:\n",
+    "        if word.lower() >= \"h\":\n",
+    "            print(word.upper())\n",
+    "            word = \"\"\n",
+    "        else:\n",
+    "            word = \"\"\n",
+    "\n",
+    "            \n"
    ]
   },
   {
@@ -368,7 +590,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
