--- a/Python Fundamentals/Module_1.2_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1.2_Required_Code_Python_Fundamentals.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,15 +53,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome, Dan Oren. Enter a one sentence quote that inspires you: Everyone wants to lay in the shade, but no one wants to plant a tree.\n",
+      "WANTS\n",
+      "TO\n",
+      "LAY\n",
+      "IN\n",
+      "THE\n",
+      "SHADE\n",
+      "NO\n",
+      "ONE\n",
+      "WANTS\n",
+      "TO\n",
+      "PLANT\n",
+      "TREE\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\" following the Assignment requirements use of functions, menhods and kwyowrds\n",
     "# Sample quote: \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
+    "full_name = \"Dan Oren\"\n",
+    "word = \"\"\n",
+    "quote = input(\"Welcome, \" + full_name +\". Enter a one sentence quote that inspires you: \")\n",
+    "for ltr in quote:\n",
+    "    if ltr.isalpha():\n",
+    "        word += ltr\n",
+    "    else:\n",
+    "        if word.lower() >= \"h\":\n",
+    "            print(word.upper())\n",
+    "            word = \"\"\n",
+    "        else:\n",
+    "            word = \"\"\n",
     "\n",
+    "            \n",
     "\n",
     "\n"
    ]
@@ -78,7 +108,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
