--- a/Python Absolute Beginner/Module_3.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_3.2_Required_Code.ipynb
@@ -47,22 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How much cheese would you like to order? 27\n",
-      "Dan Oren, enter cheese order weight: 27\n",
-      "27 costs $135\n"
+      "How much cheese would you like to order? 110\n",
+      "Dan Oren, enter cheese order weight: 110\n",
+      "110 is more than currently available stock, please try again.\n"
      ]
     }
    ],
    "source": [
     "# [ ] create fucntion, call and test \n",
-    "def cheese_order(order_amount, maximum = 100, minimum = 10, price = 5):\n",
+    "def cheese_order(order_amount, maximum, minimum, price):\n",
     "    full_name = \"Dan Oren,\"\n",
     "    order_amount = int(input(\"How much cheese would you like to order? \"))\n",
     "    if order_amount > maximum:\n",
@@ -78,7 +78,7 @@
     "    return \n",
     "\n",
     "    \n",
-    "cheese_order(\"How much cheese would you like to order? \")\n"
+    "cheese_order(\"How much cheese would you like to order?: \",100,10,5)\n"
    ]
   },
   {
