--- a/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
+++ b/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
@@ -95,7 +95,23 @@
    },
    "outputs": [],
    "source": [
-    "# [ ] create, call and test the adding_report() function\n"
+    "# Initialize variables first \n",
+    "total = \"\"\n",
+    "items = \"\"\n",
+    "full_name = \"Dan Oren\"\n",
+    "\n",
+    "def adding_report(report = \"T\"): # define function adding_report\n",
+    "    while True:\n",
+    "        user_input = input(\"Enter an integer or \\\"Q\\\": \") \n",
+    "        if user_input.isdigit(): \n",
+    "            total += user_input\n",
+    "        elif user_input.islower().isalpha(\"a\"): \n",
+    "            items += user_input\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
