--- a/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
+++ b/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -89,24 +88,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an integer or \"Q\": 5\n",
+      "Enter an integer or \"Q\": 7\n",
+      "Enter an integer or \"Q\": quit\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize variables first \n",
     "total = \"\"\n",
     "items = \"\"\n",
     "full_name = \"Dan Oren\"\n",
     "\n",
-    "def adding_report(report = \"T\"): # define function adding_report\n",
+    "def adding_report(report): # define function adding_report\n",
     "    while True:\n",
     "        user_input = input(\"Enter an integer or \\\"Q\\\": \") \n",
-    "        if user_input.isdigit(): \n",
-    "            total += user_input\n",
-    "        elif user_input.islower().isalpha(\"a\"): \n",
-    "            items += user_input\n",
+    "        if user_input.isdigit():\n",
+    "            user_input += total\n",
+    "        elif report.islower() == \"a\":\n",
+    "            item += user_input\n",
+    "            item += \"\\n\"\n",
+    "        if user_input.lower().startswith(\"q\"):\n",
+    "            if report.islower() == \"a\":\n",
+    "                print(items,\"\\n\",\"Total:\\n\",total) \n",
+    "                break\n",
+    "            elif report.islower() == \"q\": \n",
+    "                print(\"Total:\\n\", total)\n",
+    "                break\n",
+    "        else: \n",
+    "            if user_input.isdigit() == False or user_input.islower() == \"q\":\n",
+    "                print(\"Input is Invalid\")\n",
+    "            \n",
+    "\n",
+    "adding_report(\"A\")\n",
+    "\n",
+    "            \n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "      \n",
     "\n",
     "\n",
     "    \n",
@@ -124,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
