--- a/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
+++ b/Python Absolute Beginner/Module_5_Required_FINAL_Project.ipynb
@@ -88,58 +88,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an integer or \"Q\": 5\n",
-      "Enter an integer or \"Q\": 7\n",
-      "Enter an integer or \"Q\": quit\n"
+      "Enter an integer or \"Quit\": 5\n",
+      "Enter an integer or \"Quit\": 4\n",
+      "Enter an integer or \"Quit\": 3\n",
+      "Enter an integer or \"Quit\": 2\n",
+      "Enter an integer or \"Quit\": 1\n",
+      "Enter an integer or \"Quit\": quit\n",
+      "\n",
+      "Items\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "\n",
+      "Total:\n",
+      "15\n",
+      "Calculated by: Dan Oren\n"
      ]
     }
    ],
    "source": [
-    "# Initialize variables first \n",
-    "total = \"\"\n",
-    "items = \"\"\n",
-    "full_name = \"Dan Oren\"\n",
-    "\n",
-    "def adding_report(report): # define function adding_report\n",
-    "    while True:\n",
-    "        user_input = input(\"Enter an integer or \\\"Q\\\": \") \n",
+    "# [ ] create, call and test the adding_report() function\n",
+    "def adding_report(report = \"T\"):  \n",
+    "    total = 0 \n",
+    "    items = \"Items\\n\" \n",
+    "    full_name = \"Dan Oren\"  \n",
+    "    while True: \n",
+    "        user_input = input(\"Enter an integer or \\\"Quit\\\": \") \n",
     "        if user_input.isdigit():\n",
-    "            user_input += total\n",
-    "        elif report.islower() == \"a\":\n",
-    "            item += user_input\n",
-    "            item += \"\\n\"\n",
-    "        if user_input.lower().startswith(\"q\"):\n",
-    "            if report.islower() == \"a\":\n",
-    "                print(items,\"\\n\",\"Total:\\n\",total) \n",
+    "            total += int(user_input)\n",
+    "            if report == \"A\":\n",
+    "                items += user_input + \"\\n\"\n",
+    "        elif user_input.lower().startswith(\"q\"):\n",
+    "            if report == \"A\":\n",
+    "                print(\"\\n\" + items + \"\\n\" + \"Total:\\n\" + str(total) + \"\\nCalculated by: \" + full_name) \n",
     "                break\n",
-    "            elif report.islower() == \"q\": \n",
-    "                print(\"Total:\\n\", total)\n",
+    "            else:\n",
+    "                print(\"\\nTotal:\\n\" + str(total) + \"\\nCalculated by: \" + full_name)\n",
     "                break\n",
-    "        else: \n",
-    "            if user_input.isdigit() == False or user_input.islower() == \"q\":\n",
-    "                print(\"Input is Invalid\")\n",
-    "            \n",
-    "\n",
-    "adding_report(\"A\")\n",
-    "\n",
-    "            \n",
-    "\n",
-    "            \n",
-    "\n",
-    "\n",
-    "      \n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    "
+    "        else:\n",
+    "            print(\"Input is Invalid\")\n",
+    "adding_report(\"A\")  "
    ]
   },
   {
