--- a/Python Fundamentals/Module_2.1_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2.1_Practice_Python_Fundamentals.ipynb
@@ -23,22 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and populate list called days_of_week then print it\n",
-    "\n"
+    "days_of_week = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "print(days_of_week)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tuesday', 'Thursday', 'Saturday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] after days_of_week is run above, print the days in the list at odd indexes 1,3,5\n",
-    "\n"
+    "print(days_of_week[1::2])"
    ]
   },
   {
@@ -63,7 +80,7 @@
    "outputs": [],
    "source": [
     "# [ ] create and populate list called phone_letters then print it\n",
-    "\n"
+    "phone_letters = [\" \",\"\",\"ABC\",\"DEF\",\"GHI\",\"JKL\",\"MNO\",\"PQRS\",\"TUV\",\"MXYZ\"]\n"
    ]
   },
   {
@@ -80,28 +97,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a variable: day, assign day to \"Tuesday\" using days_of_week[]\n",
     "# [ ] print day variable\n",
-    "\n",
-    "\n",
+    "days_of_week = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "day = \"\"\n",
+    "for ltrs in days_of_week:\n",
+    "    if ltrs == \"Tuesday\":\n",
+    "        day += ltrs\n",
+    "    else:\n",
+    "        pass\n",
+    "print(day)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saturday\n"
+     ]
+    }
+   ],
    "source": [
     "# PART 2\n",
     "# [ ] assign day to days_of_week index = 5\n",
     "# [ ] print day\n",
-    "\n",
-    "\n"
+    "day = \"\"\n",
+    "for ltrs in days_of_week: \n",
+    "    if ltrs == \"Saturday\":\n",
+    "        day += ltrs\n",
+    "    else: \n",
+    "        pass\n",
+    "print(day)"
    ]
   },
   {
@@ -118,14 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday', 'Thaturday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Make up a new day! - append an 8th day of the week to days_of_week \n",
     "# [ ] print days_of_week\n",
-    "\n",
-    "\n"
+    "days_of_week.append(\"Thaturday\")\n",
+    "print(days_of_week)\n"
    ]
   },
   {
@@ -139,25 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thunday', 'Thursday', 'Friday', 'Saturday', 'Sunday', 'Thaturday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Make up another new day - insert a new day into the middle of days_of_week between Wed - Thurs\n",
     "# [ ] print days_of_week\n",
-    "\n",
+    "days_of_week.insert(3,\"Thunday\")\n",
+    "print(days_of_week)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thunday', 'Thursday', 'Friday', 'Thriday', 'Thriday', 'Saturday', 'Sunday', 'Thaturday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  Extend the weekend - insert a day between Fri & Sat in the days_of_week list\n",
     "# [ ] print days_of_week\n",
-    "\n",
+    "days_of_week.insert(6, \"Thriday\")\n",
+    "print(days_of_week)\n",
     "\n"
    ]
   },
@@ -172,39 +242,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thunday', 'Thursday', 'Friday', 'Thriday', 'Thriday', 'Saturday', 'Sunday', 'Thaturday']\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thunday', 'Thursday', 'Friday', 'Thriday', 'Thriday', 'Saturday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] modified week is too long - pop() the last index of days_of_week & print .pop() value\n",
     "# [ ] print days_of_week\n",
-    "\n",
+    "print(days_of_week)\n",
+    "days_of_week.pop()\n",
+    "print(days_of_week)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thunday', 'Thursday', 'Friday', 'Thriday', 'Thriday', 'Saturday', 'Sunday']\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Thriday', 'Thriday', 'Saturday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] delete (del) the new day added to the middle of the week \n",
     "# [ ] print days_of_week\n",
-    "\n",
-    "\n"
+    "print(days_of_week)\n",
+    "del days_of_week[3]\n",
+    "print(days_of_week)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Thriday', 'Saturday', 'Sunday']\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] programmers choice - pop() any day in days_of week & print .pop() value\n",
     "# [ ] print days_of_week\n",
+    "print(days_of_week)\n",
+    "days_of_week.pop(5)\n",
+    "print(days_of_week)\n",
+    "days_of_week.pop(5)\n",
+    "print(days_of_week)\n",
     "\n"
    ]
   },
@@ -257,20 +363,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create let_to_num()\n",
-    "\n"
+    "phone_letters = [\" \",\"\",\"ABC\",\"DEF\",\"GHI\",\"JKL\",\"MNO\",\"PQRS\",\"TUV\",\"MXYZ\"]\n",
+    "def let_to_num(letter): \n",
+    "    key = 0\n",
+    "    while key < 10:\n",
+    "        if letter in phone_letters[key]:\n",
+    "            return key\n",
+    "        else:\n",
+    "            key = key + 1\n",
+    "    return \"Not Found\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let_to_num(\"P\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,14 +414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# [ ] Challenge: write the code for \"reverse a string\"\n",
-    "\n",
-    "    \n",
-    " "
+    "# [ ] Challenge: write the code for \"reverse a string\"\n"
    ]
   },
   {
@@ -315,7 +439,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
