--- a/Python Fundamentals/Module_2.2_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2.2_Required_Code_Python_Fundamentals.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,16 +66,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Welcome, Dan Oren. Look at the list of plants: ['Pothos', 'Snake', 'Monstera', 'Fittonia']\n",
+      "Enter the name of a plant or \"quit\": 65\n",
+      "Invalid input, please try again.\n",
+      "\n",
+      "Welcome, Dan Oren. Look at the list of plants: ['Pothos', 'Snake', 'Monstera', 'Fittonia']\n"
+     ]
+    }
+   ],
    "source": [
-    "# [] create list-o-matic as a function and call it\n",
-    "# [] be sure to include your spelled-out name in the welcome prompt\n",
-    "# [] you are welcome to use any list you like for list-o-matic, does not have to be animals \n",
+    "# Initialize variables first \n",
+    "full_name = \"Dan Oren\"\n",
+    "plant_list = [\"Pothos\", \"Snake\", \"Monstera\", \"Fittonia\"]\n",
     "\n",
+    "# Defining the function list_o_matic \n",
+    "def list_o_matic(input_string, input_list):\n",
+    "    if input_string == \"\":\n",
+    "        return print('\"'+input_list.pop()+'\"', \"popped from list.\")\n",
+    "    elif input_string.isdigit():\n",
+    "        return print(\"Invalid input, please try again.\")\n",
+    "    else:\n",
+    "        if input_string in input_list:\n",
+    "            input_list.remove(input_string)\n",
+    "            return print('\"'+input_string+'\"', \"removed from list.\")\n",
+    "        else:\n",
+    "            input_list.append(input_string)\n",
+    "            return print(\"1 instance of\", '\"' + input_string + '\"', \"appended to list.\")\n",
     "\n",
+    "        \n",
+    "# Start program flow        \n",
+    "while plant_list:\n",
+    "    print(\"\\nWelcome, \" + full_name + \".\" + \" Look at the list of plants:\", plant_list)\n",
+    "    check_string = input(\"Enter the name of a plant or \\\"quit\\\": \")\n",
+    "    if check_string.lower().startswith(\"q\"):\n",
+    "        break\n",
+    "    else:\n",
+    "        list_o_matic(check_string, plant_list)\n",
+    "print(\"\\nGoodbye!\")\n",
     "\n"
    ]
   },
@@ -91,7 +124,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
