--- a/Python Fundamentals/Module_3.2_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3.2_Required_Code_Python_Fundamentals.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,31 +67,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome Dan Oren, enter a saying or poem: Little fly, Thy summer’s play My thoughtless hand Has brushed away. Am not I A fly like thee? Or art not thou A man like me?\n",
+      "or BRUSHED thy not Little thou me? SUMMER’S thee? like THOUGHTLESS play i a not hand a my fly am man\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create poem mixer function, call the function with the provided test string\n",
     "# [] test string: `Little fly, Thy summer’s play My thoughtless hand Has brushed away. Am not I A fly like thee? Or art not thou A man like me?`  \n",
+    "full_name = \"Dan Oren\"\n",
     "\n",
+    "# Define the word_mixer function\n",
+    "def word_mixer(word_list):\n",
+    "    new_words = []\n",
+    "    word_list.sort()\n",
+    "    while len(word_list) > 5: \n",
+    "        new_words.append(word_list.pop(-5))\n",
+    "        new_words.append(word_list.pop(0))\n",
+    "        new_words.append(word_list.pop())\n",
+    "    else: \n",
+    "        return new_words\n",
     "\n",
-    "\n"
+    "# Program Flow \n",
+    "\n",
+    "user_input = input(\"Welcome \" + full_name + \", enter a saying or poem: \")\n",
+    "words_list = user_input.split()\n",
+    "lenght = len(words_list)\n",
+    "\n",
+    "for word in range(lenght):\n",
+    "    if len(words_list[word]) <= 3:\n",
+    "        words_list[word] = words_list[word].lower()\n",
+    "    elif len(words_list[word]) >= 7: \n",
+    "        words_list[word] = words_list[word].upper()\n",
+    "    else: \n",
+    "        pass \n",
+    "print(\" \".join(word_mixer(words_list)))\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works. \n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
